Date/time inputs should not use user-specified formats https://bugs.webkit.org/show_bug.cgi?id=216484 <rdar://problem/68864815>

Reviewed by Wenson Hsieh.

Source/WebCore:

On macOS, users can specify custom date and time formats through System
Preferences. These formats can be different from the default for the
user’s current locale. Using these formats when rendering date and time
inputs is a potential fingerprinting vector, as sites can apply CSS to
components of the input, and measure the size of the input.

To fix, we create a new NSLocale even if the identifier matches
[NSLocale currentLocale]. This ensures that m_locale does not contain
the user's changes to the locale.

* platform/text/cocoa/LocaleCocoa.h:
* platform/text/cocoa/LocaleCocoa.mm:
(WebCore::Locale::create):
(WebCore::LocaleCocoa::LocaleCocoa):

Tools:

Added a test which sets a custom date format using "defaults write"
and verifies that the width is indistinguishable from the default
format.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/DateInputTests.mm: Added.
(createWebViewForTest):
(DateInputsTests.IgnoresUserEditsToLocale):


Canonical link: https://commits.webkit.org/229521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267283 268f45cc-cd09-0410-ab3c-d52691b4dbfc